--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "fideloper/proxy": "^4.4",
+        "kyslik/column-sortable": "^6.5",
         "laravel/framework": "^6.20.26",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "laravelcollective/html": "^6.4",
+        "stripe/stripe-php": "^10.12"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
@@ -20,6 +23,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.5.8|^9.3.3"
+        
     },
     "config": {
         "optimize-autoloader": true,
